add enum details in changelog (#335)
* add enum details in changelog

* fix code spacing

* change word order

--- a/docs/changelog/lab-testing/api.mdx
+++ b/docs/changelog/lab-testing/api.mdx
@@ -5,6 +5,36 @@ title: "API"
 ### Problem in Transit Order Statuses (Mar 2025)
 Testkit orders now support two new statuses representing problems in transit. Refer to the [lab test lifecycle documentation](/lab/workflow/lab-test-lifecycle).
 
+<Accordion icon="billboard" iconType="duotone" title="Details" defaultOpen>
+We’re introducing two new statuses for the `OrderLowLevelStatus` enum (`problem_in_transit_lab` and `problem_in_transit_customer`) and two for the `OrderStatus` enum (`collecting_sample.testkit.problem_in_transit_customer` and `collecting_sample.testkit.problem_in_transit_lab`)—and we may make further changes in the future. To ensure future compatibility, we ask that you avoid exhaustive matching on enum values. Code that assumes all current values are exhaustive could break or fail to compile with SDK upgrades.
+
+Here’s how to verify and ensure you benefit from future enhancements:
+
+1. Look for areas in your code where you take an action based on the values of a Junction-defined enum. For example, you might have Python code like this:
+
+```python Python
+match status:
+    case OrderStatus.TESTKIT_ORDERED:
+        handle_ordered()
+    case OrderStatus.TESTKIT_AWAITING_REGISTRATION:
+        handle_awaiting_registration()
+        # other cases...
+```
+
+2. Check unknown values in your code paths are handled gracefully—for example, by using default cases. Logging unknown values can help you stay informed.
+
+```python Python
+match status:
+    # previous cases...
+    case unknown_status:
+        logger.warning(f"Unknown status received: {repr(unknown_status)}")
+```
+
+3. Make sure you’re running the latest version of our SDK.
+
+4. You’re good to go. Once you’ve checked the code paths won’t break if Junction-defined enums start including new values, no further action is needed.
+</Accordion>
+
 ### Source Marker Identification for Results (Nov 2024)
 Results now feature the source, orderable marker from which they originated.
 Refer to the [documentation](/lab/results/result-formats)
