Remove the Experimental moniker on Android Health Connect Background Sync

--- a/docs/wearables/guides/android-health-connect.mdx
+++ b/docs/wearables/guides/android-health-connect.mdx
@@ -53,8 +53,8 @@ customize the Foreground Service notification which may be shown by the Android 
 any prolonged health data sync attempts.
 </Step>
 
-<Step title="[Optional] Configure Background Sync (experimental)">
-Follow the [Background Sync (experimental)](#background-sync-experimental) guidance below to
+<Step title="[Optional] Configure Background Sync">
+Follow the [Background Sync](#background-sync) guidance below to
 configure regular background sync.
 </Step>
 
@@ -363,12 +363,7 @@ vital_health.setSyncNotificationContent(vital_health.SyncNotificationContent(
 </Tab>
 </Tabs>
 
-## Background Sync (Experimental)
-
-<Warning>
-This is an experimental feature which Vital is actively developing in collaboration
-with pilot customers. It may be changed or retracted at short notice.
-</Warning>
+## Background Sync
 
 Vital Health SDK supports an **opt-in** Android Background Sync feature. It provides a continuous monitoring
 experience with Android Health Connect, siimlar to [Background Delivery for Apple HealthKit](/wearables/guides/apple-healthkit#background-delivery) on iOS.
