--- a/docs/wearables/providers/introduction.mdx
+++ b/docs/wearables/providers/introduction.mdx
@@ -154,7 +154,7 @@ SDK Based Providers are all push-based, where data are pushed from the Vital SDK
 | Provider                                                               | Description                                     |
 | ---------------------------------------------------------------------- | ----------------------------------------------- |
 | [Apple HealthKit](https://www.apple.com/uk/ios/health/)                | <ul><li>Auto sync on app launch and in foreground</li><li>Hourly Background Sync, subject to OS throttling</li></ul> |
-| [Android Health Connect](https://developer.android.com/health-connect) | <ul><li>Sync On App Launch</li><li>Opt-in Hourly Background Sync (Experimental), subject to OS throttling</li></ul> |
+| [Android Health Connect](https://developer.android.com/health-connect) | <ul><li>Sync On App Launch</li><li>Opt-in Hourly Background Sync, subject to OS throttling</li></ul> |
 | [Omron](https://www.omron-healthcare.com)                              | Manual Post                                     |
 | [Contour](https://www.diabetes.ascensia.com)                           | Manual Post                                     |
 | [Accu-Chek](https://www.accu-chek.com)                                 | Manual Post                                     |
