Changelog: HealthKit data type coverage expansion

--- a/docs/changelog/wearables/providers.mdx
+++ b/docs/changelog/wearables/providers.mdx
@@ -2,6 +2,68 @@
 title: "Provider and Resources"
 ---
 
+### Expanded Apple HealthKit data type coverage (March 2025)
+
+Junction iOS SDK 1.5.0 has expanded the HealthKit data type coverage:
+
+Type | Remarks
+---- | ----
+Profile summary | Wheelchair Mode usage
+Activity summary | Wheelchair Mode support (distance and push count)
+Body summary | Lean Body Mass, Body Mass Index, Waist Circumference
+Timeseries resources | Lean Body Mass, Body Mass Index, Waist Circumference, Wheelchair Push, Distance (Wheelchair Mode support), Stand Hour, Stand Duration, Sleep Apnea Alert, Sleep Breathing Disturbance, FEV1, Forced Vital Capacity, Peak Expiratory Flow Rate, Inhaler Usage, Fall, UV Exposure, Daylight Exposure, Handwashing, Basal Body Temperature
+
+
+<Accordion icon="heart" iconType="duotone" title="Details" defaultOpen>
+For more information, check out:
+
+#### Data Events
+* the [Profile data events](/event-catalog/daily.data.profile.created) in the Event Catalog;
+* the [Activity data events](/event-catalog/daily.data.activity.created) in the Event Catalog;
+* the [Body data events](/event-catalog/daily.data.body.created) in the Event Catalog;
+* the [Lean Body Mass data events](/event-catalog/daily.data.lean_body_mass.created) in the Event Catalog;
+* the [Body Mass Index data events](/event-catalog/daily.data.body_mass_index.created) in the Event Catalog;
+* the [Waist Circumference data events](/event-catalog/daily.data.waist_circumference.created) in the Event Catalog;
+* the [Wheelchair Push data events](/event-catalog/daily.data.wheelchair_push.created) in the Event Catalog;
+* the [Distance data events](/event-catalog/daily.data.distance.created) in the Event Catalog;
+* the [Stand Hour data events](/event-catalog/daily.data.stand_hour.created) in the Event Catalog;
+* the [Stand Duration data events](/event-catalog/daily.data.stand_duration.created) in the Event Catalog;
+* the [Sleep Apnea Alert data events](/event-catalog/daily.data.sleep_apnea_alert.created) in the Event Catalog;
+* the [Sleep Breathing Disturbance data events](/event-catalog/daily.data.sleep_breathing_disturbance.created) in the Event Catalog;
+* the [FEV1 data events](/event-catalog/daily.data.forced_expiratory_volume_1.created) in the Event Catalog;
+* the [Forced Vital Capacity data events](/event-catalog/daily.data.forced_vital_capacity.created) in the Event Catalog;
+* the [Peak Expiratory Flow Rate data events](/event-catalog/daily.data.peak_expiratory_flow_rate.created) in the Event Catalog;
+* the [Inhaler Usage data events](/event-catalog/daily.data.inhaler_usage.created) in the Event Catalog;
+* the [Fall data events](/event-catalog/daily.data.fall.created) in the Event Catalog;
+* the [UV Exposure data events](/event-catalog/daily.data.uv_exposure.created) in the Event Catalog;
+* the [Daylight Exposure data events](/event-catalog/daily.data.daylight_exposure.created) in the Event Catalog;
+* the [Handwashing data events](/event-catalog/daily.data.handwashing.created) in the Event Catalog;
+* the [Basal Body Temperature data events](/event-catalog/daily.data.basal_body_temperature.created) in the Event Catalog;
+
+#### Data access API
+* the [Get Profile](/api-reference/data/profile/get-summary) endpoint documentation;
+* the [Get Activity](/api-reference/data/activity/get-summary) endpoint documentation;
+* the [Get Body](/api-reference/data/body/get-summary) endpoint documentation;
+* the [Get Lean Body Mass](/api-reference/data/timeseries/lean-body-mass) endpoint documentation;
+* the [Get Body Mass Index](/api-reference/data/timeseries/body-mass-index) endpoint documentation;
+* the [Get Waist Circumference](/api-reference/data/timeseries/waist-circumference) endpoint documentation;
+* the [Get Wheelchair Push](/api-reference/data/timeseries/wheelchair-push) endpoint documentation;
+* the [Get Distance](/api-reference/data/timeseries/distance) endpoint documentation;
+* the [Get Stand Hour](/api-reference/data/timeseries/stand-hour) endpoint documentation;
+* the [Get Stand Duration](/api-reference/data/timeseries/stand-duration) endpoint documentation;
+* the [Get Sleep Apnea Alert](/api-reference/data/timeseries/sleep-apnea-alert) endpoint documentation;
+* the [Get Sleep Breathing Disturbance](/api-reference/data/timeseries/sleep-breathing-disturbance) endpoint documentation;
+* the [Get FEV1](/api-reference/data/timeseries/forced-expiratory-volume-1) endpoint documentation;
+* the [Get Forced Vital Capacity](/api-reference/data/timeseries/forced-vital-capacity) endpoint documentation;
+* the [Get Peak Expiratory Flow Rate](/api-reference/data/timeseries/peak-expiratory-flow-rate) endpoint documentation;
+* the [Get Inhaler Usage](/api-reference/data/timeseries/inhaler-usage) endpoint documentation;
+* the [Get Fall](/api-reference/data/timeseries/fall) endpoint documentation;
+* the [Get UV Exposure](/api-reference/data/timeseries/uv-exposure) endpoint documentation;
+* the [Get Daylight Exposure](/api-reference/data/timeseries/daylight-exposure) endpoint documentation;
+* the [Get Handwashing](/api-reference/data/timeseries/handwashing) endpoint documentation;
+* the [Get Basal Body Temperature](/api-reference/data/timeseries/basal-body-temperature) endpoint documentation;
+</Accordion>
+
 
 ### Improved LibreView practice connection process (Jan 2025)
 
