[LAB-531] add address inference docs

--- a/docs/api-reference/lab-testing/abn-pdf.mdx
+++ b/docs/api-reference/lab-testing/abn-pdf.mdx
@@ -4,6 +4,10 @@ openapi: "GET /v3/order/{order_id}/abn_pdf"
 version: beta
 ---
 
+Retrieving ABNs is currently in closed beta.
+
+When [getting an order](/api-reference/lab-testing/get-order#response-has-abn), you can view the `has_abn` field to determine if an ABN form is available for this order.
+
 <RequestExample>
 
 ```bash cURL
