--- a/docs/lab/overview/insurance.mdx
+++ b/docs/lab/overview/insurance.mdx
@@ -22,6 +22,15 @@ Note that you can only set insurance data for users that already have patient in
 
 It is expected that insurance data will become outdated or change with time. It is the customer's responsability to update this data with Vital in order to minimise the risk of a denied claim.
 
+<Warning>
+**Medicare and Medicaid location inference closed beta**
+
+Currently, we have closed beta support for infering the Medicare or Medicaid plan to use based on a patient's address. This endpoint supports `payor_code`s with values of `MEDFED` (Medicare) and
+`MAIDFED` (Medicaid) to do this.
+
+For example, supplying a `payor_code` of `MEDFED` for a patient that lives in Arizona will create insurance data using Arizona's Medicare plan payor code.
+</Warning>
+
 ```json
 "insurance": {
     "payor_code": "string",
