--- a/docs/changelog/wearables/providers.mdx
+++ b/docs/changelog/wearables/providers.mdx
@@ -2,6 +2,39 @@
 title: "Provider and Resources"
 ---
 
+### Summary Ingestion Timestamps (April 2025)
+
+Activity, Body, Sleep, Sleep Cycle, Workout, Meal and Menstrual Cycle now expose ingestion timestamps:
+
+Field         | Remarks
+------------- | ---------
+`created_at`  | The time at which Junction first ingested this summary.
+`updated_at`  | The time at which Junction ingested the most recent update to this summary.
+
+
+<Accordion icon="heart" iconType="duotone" title="Details" defaultOpen>
+For more information, check out:
+
+#### Data Events
+* the [Activity data events](/event-catalog/daily.data.activity.created) in the Event Catalog;
+* the [Body data events](/event-catalog/daily.data.body.created) in the Event Catalog;
+* the [Sleep data events](/event-catalog/daily.data.sleep.created) in the Event Catalog;
+* the [Sleep Cycle data events](/event-catalog/daily.data.sleep_cycle.created) in the Event Catalog;
+* the [Workout data events](/event-catalog/daily.data.workout.created) in the Event Catalog;
+* the [Menstrual Cycle data events](/event-catalog/daily.data.menstrual_cycle.created) in the Event Catalog; and
+* the [Meal data events](/event-catalog/daily.data.meal.created) in the Event Catalog.
+
+#### Data access API
+* the [Get Activity](/api-reference/data/activity/get-summary) endpoint documentation;
+* the [Get Body](/api-reference/data/body/get-summary) endpoint documentation;
+* the [Get Sleep](/api-reference/data/sleep/get-summary) endpoint documentation;
+* the [Get Sleep Cycle](/api-reference/data/sleep-cycle/get-summary) endpoint documentation;
+* the [Get Workout](/api-reference/data/workout/get-summary) endpoint documentation;
+* the [Get Menstrual Cycle](/api-reference/data/menstrual-cycle/get-summary) endpoint documentation; and
+* the [Get Meal](/api-reference/data/meal/get-summary) endpoint documentation.
+</Accordion>
+
+
 ### Expanded Apple HealthKit data type coverage (March 2025)
 
 Junction iOS SDK 1.5.0 has expanded the HealthKit data type coverage:
@@ -37,8 +70,8 @@ For more information, check out:
 * the [Fall data events](/event-catalog/daily.data.fall.created) in the Event Catalog;
 * the [UV Exposure data events](/event-catalog/daily.data.uv_exposure.created) in the Event Catalog;
 * the [Daylight Exposure data events](/event-catalog/daily.data.daylight_exposure.created) in the Event Catalog;
-* the [Handwashing data events](/event-catalog/daily.data.handwashing.created) in the Event Catalog;
-* the [Basal Body Temperature data events](/event-catalog/daily.data.basal_body_temperature.created) in the Event Catalog;
+* the [Handwashing data events](/event-catalog/daily.data.handwashing.created) in the Event Catalog; and
+* the [Basal Body Temperature data events](/event-catalog/daily.data.basal_body_temperature.created) in the Event Catalog.
 
 #### Data access API
 * the [Get Profile](/api-reference/data/profile/get-summary) endpoint documentation;
@@ -60,8 +93,8 @@ For more information, check out:
 * the [Get Fall](/api-reference/data/timeseries/fall) endpoint documentation;
 * the [Get UV Exposure](/api-reference/data/timeseries/uv-exposure) endpoint documentation;
 * the [Get Daylight Exposure](/api-reference/data/timeseries/daylight-exposure) endpoint documentation;
-* the [Get Handwashing](/api-reference/data/timeseries/handwashing) endpoint documentation;
-* the [Get Basal Body Temperature](/api-reference/data/timeseries/basal-body-temperature) endpoint documentation;
+* the [Get Handwashing](/api-reference/data/timeseries/handwashing) endpoint documentation; and
+* the [Get Basal Body Temperature](/api-reference/data/timeseries/basal-body-temperature) endpoint documentation.
 </Accordion>
 
 
