--- a/docs/changelog/wearables/providers.mdx
+++ b/docs/changelog/wearables/providers.mdx
@@ -20,7 +20,7 @@ For more information, check out:
 * the [Body data events](/event-catalog/daily.data.body.created) in the Event Catalog;
 * the [Sleep data events](/event-catalog/daily.data.sleep.created) in the Event Catalog;
 * the [Sleep Cycle data events](/event-catalog/daily.data.sleep_cycle.created) in the Event Catalog;
-* the [Workout data events](/event-catalog/daily.data.workout.created) in the Event Catalog;
+* the [Workout data events](/event-catalog/daily.data.workouts.created) in the Event Catalog;
 * the [Menstrual Cycle data events](/event-catalog/daily.data.menstrual_cycle.created) in the Event Catalog; and
 * the [Meal data events](/event-catalog/daily.data.meal.created) in the Event Catalog.
 
@@ -29,7 +29,7 @@ For more information, check out:
 * the [Get Body](/api-reference/data/body/get-summary) endpoint documentation;
 * the [Get Sleep](/api-reference/data/sleep/get-summary) endpoint documentation;
 * the [Get Sleep Cycle](/api-reference/data/sleep-cycle/get-summary) endpoint documentation;
-* the [Get Workout](/api-reference/data/workout/get-summary) endpoint documentation;
+* the [Get Workout](/api-reference/data/workouts/get-summary) endpoint documentation;
 * the [Get Menstrual Cycle](/api-reference/data/menstrual-cycle/get-summary) endpoint documentation; and
 * the [Get Meal](/api-reference/data/meal/get-summary) endpoint documentation.
 </Accordion>
