Update Withings bulk trigger historical pull rate limit

--- a/docs/api-reference/link/bulk-trigger-historical-pull.mdx
+++ b/docs/api-reference/link/bulk-trigger-historical-pull.mdx
@@ -36,7 +36,8 @@ Garmin              | 2 connections every 1 minute
 Fitbit, Polar       | 250 connections at a time; no time-based throttling
 Strava              | 1 connections every 15 minutes
 Oura                | 150 connections every 5 minutes
-All other providers | 2 connections every 1 minute
+Withings            | 8 connections every 1 minute, with the assumption of your app using [Withings Enterprise Plan](https://developer.withings.com/developer-guide/v3/withings-solutions/withings-api-plans/).
+All other providers | 8 connections every 1 minute
 
 
 #### Historical Pull Range
