Simplify navigation config + Move Horizon AI to Documentation

--- a/docs/api-reference/horizon-ai/aggregation/overview.mdx
+++ b/docs/api-reference/horizon-ai/aggregation/overview.mdx
@@ -1,4 +1,8 @@
-The Horizon AI Aggregation Query consolidates the multitude of user data collected across [wearable data providers](/wearables/providers/introduction)
+import HorizonAIBeta from '/snippets/horizon-ai-beta.mdx';
+
+<HorizonAIBeta />
+
+Horizon AI Query consolidates the multitude of user data collected across [wearable data providers](/wearables/providers/introduction)
 and [source types](/wearables/providers/data-attributions#source-type) into simple tabular outputs.
 
 ![A high-level illustration of the inputs and outputs of the Aggregation API](/img/aggregation/overview.png)
@@ -19,12 +23,7 @@ Work with time zone agnostic outputs that are indexed in the user's perception o
 
 ## Query API and Continuous Query
 
-<Warning>
-Query API and Continuous Query are currently in closed beta.
-The query schema and the behaviour is subject to change based on beta feedback.
-</Warning>
-
-You can use Horizon AI Aggregation Query through two mediums:
+You can use Horizon AI Query through two mediums:
 
 ### Query API
 * Rapid Insights: Ideal for quick analysis, allowing developers to experiment with individual user data immediately.
