--- a/docs/api-reference/horizon-ai/aggregation/query-one.mdx
+++ b/docs/api-reference/horizon-ai/aggregation/query-one.mdx
@@ -3,10 +3,9 @@ title: Query a single user
 openapi: post /aggregate/v1/user/{user_id}/query
 ---
 
-<Warning>
-Query API is currently in closed beta.
-The query schema and the behaviour is subject to change based on beta feedback.
-</Warning>
+import HorizonAIBeta from '/snippets/horizon-ai-beta.mdx';
+
+<HorizonAIBeta />
 
 <AccordionGroup>
 
