--- a/docs/api-reference/horizon-ai/aggregation/using-query-api.mdx
+++ b/docs/api-reference/horizon-ai/aggregation/using-query-api.mdx
@@ -2,6 +2,10 @@
 title: Using Query API
 ---
 
+import HorizonAIBeta from '/snippets/horizon-ai-beta.mdx';
+
+<HorizonAIBeta />
+
 You can make use of the Query API through these mediums:
 
 | Channel | Remarks |
