--- a/docs/api-reference/horizon-ai/continuous-query/create.mdx
+++ b/docs/api-reference/horizon-ai/continuous-query/create.mdx
@@ -3,11 +3,10 @@ title: Create a Continuous Query
 openapi: post /v1/org/{org_id}/team/{team_id}/{environment}/continuous_query
 ---
 
+import HorizonAIBeta from '/snippets/horizon-ai-beta.mdx';
+
+<HorizonAIBeta />
+
 import OrgManagementAPI from '/snippets/org-management-api.mdx';
 
 <OrgManagementAPI />
-
-<Warning>
-Continuous Query is currently in closed beta.
-The query schema and the behaviour is subject to change based on beta feedback.
-</Warning>
