--- a/docs/api-reference/horizon-ai/continuous-query/get-result-table.mdx
+++ b/docs/api-reference/horizon-ai/continuous-query/get-result-table.mdx
@@ -3,7 +3,6 @@ title: Get User Result Table
 openapi: get /aggregate/v1/user/{user_id}/continuous_query/{query_id_or_slug}/result_table
 ---
 
-<Warning>
-Continuous Query is currently in closed beta.
-The query schema and the behaviour is subject to change based on beta feedback.
-</Warning>
+import HorizonAIBeta from '/snippets/horizon-ai-beta.mdx';
+
+<HorizonAIBeta />
