--- a/docs/api-reference/user/upsert-info.mdx
+++ b/docs/api-reference/user/upsert-info.mdx
@@ -1,7 +1,10 @@
 ---
 openapi: "PATCH /v2/user/{user_id}/info"
-version: beta
 ---
+
+import FeatureBeta from '/snippets/feature-beta.mdx';
+
+<FeatureBeta />
 
 <RequestExample>
 
