--- a/docs/lab/overview/insurance.mdx
+++ b/docs/lab/overview/insurance.mdx
@@ -1,7 +1,10 @@
 ---
 title: "Insurance Ordering"
-version: beta
 ---
+
+import FeatureBeta from '/snippets/feature-beta.mdx';
+
+<FeatureBeta />
 
 Vital supports ordering with commercial insurance billing. To set this up, there are a set of steps required. This document explains the complete flow for ordering via commercial insurance.
 
