--- a/docs/lab/workflow/importing-order.mdx
+++ b/docs/lab/workflow/importing-order.mdx
@@ -1,11 +1,10 @@
 ---
 title: "Importing an Order"
-version: beta
 ---
 
-<Warning>
-  Importing orders is currently in closed beta.
-</Warning>
+import FeatureBeta from '/snippets/feature-beta.mdx';
+
+<FeatureBeta />
 
 If you want to track orders with Junction that weren’t originally placed with Junction, you can import an order.
 
