--- a/docs/api-reference/lab-testing/import-order.mdx
+++ b/docs/api-reference/lab-testing/import-order.mdx
@@ -1,10 +1,11 @@
 ---
 title: "Import Order"
 openapi: "POST /v3/order/import"
-version: beta
 ---
 
-Importing orders is currently in closed beta.
+import FeatureBeta from '/snippets/feature-beta.mdx';
+
+<FeatureBeta />
 
 <RequestExample>
 
