--- a/docs/api-reference/user/get-latest-insurance.mdx
+++ b/docs/api-reference/user/get-latest-insurance.mdx
@@ -1,7 +1,10 @@
 ---
 openapi: "GET /v2/user/{user_id}/insurance/latest"
-version: beta
 ---
+
+import FeatureBeta from '/snippets/feature-beta.mdx';
+
+<FeatureBeta />
 
 <RequestExample>
 
